--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest --coverage --verbose --detectOpenHandles",
     "lint": "eslint '**/*.js'"
   },
   "repository": {
@@ -27,5 +27,8 @@
     "eslint": "^7.1.0",
     "jest": "^26.0.1",
     "lint": "^0.7.0"
+  }, 
+  "jest": {
+    "testEnvironment": "node"
   }
 }
