--- a/package.json
+++ b/package.json
@@ -1,36 +1,34 @@
 {
-  "name": "notes",
+  "name": "notesNew",
   "version": "1.0.0",
-  "description": "## Node Ecosystem",
+  "description": "",
   "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
   "scripts": {
-    "test": "jest --coverage --verbose",
-    "lint": "eslint '**/*.js'",
-    "start": "node index.js"
+    "test": "jest --coverage --verbose --detectOpenHandles",
+    "lint": "eslint '**/*.js'"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/401-advanced-javascript-osama/notes.git"
+    "url": "git+https://github.com/401-advanced-javascript-israaOthman/notesNew.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/401-advanced-javascript-osama/notes/issues"
+    "url": "https://github.com/401-advanced-javascript-israaOthman/notesNew/issues"
   },
-  "homepage": "https://github.com/401-advanced-javascript-osama/notes#readme",
+  "homepage": "https://github.com/401-advanced-javascript-israaOthman/notesNew#readme",
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "@code-fellows/supergoose": "^1.0.2",
     "minimist": "^1.2.5",
-    "mongoose": "^5.9.15",
-    "superagent": "^5.2.2"
+    "mongoose": "^5.9.16"
   },
   "devDependencies": {
-    "@code-fellows/supergoose": "^1.0.2",
-    "eslint": "^7.0.0",
-    "jest": "^26.0.1"
+    "eslint": "^7.1.0",
+    "jest": "^26.0.1",
+    "lint": "^0.7.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
